--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,5 @@ hs_err_pid*
 replay_pid*
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij,java
+/src/Test.java
+/src/Test2.java
