--- a/.gitignore
+++ b/.gitignore
@@ -143,3 +143,5 @@ replay_pid*
 # End of https://www.toptal.com/developers/gitignore/api/intellij,java
 /src/Test.java
 /src/Test2.java
+/dinner-menu.txt
+/lunch-menu.txt
